src/styles/github-markdown.css
/* ... */
.markdown-body img[align=left] {
padding-right:20px
}

.markdown-body .refer-holder {
width: 90%;
    height: auto;
    margin: 0 auto;
    padding: 20px;
    background-color: var(--bg-secondary);
    border-left: var(--text-link) 10px solid;
    color: var(--text-primary);
    font-family: 'Times New Roman', Times, serif;
    transition: color 0.5s ease-in-out;
}

.markdown-body .refer-holder:hover {
color: var(--text-link-hover);
}

.markdown-body .code-holder {
    counter-reset: codeline;
    width: 100%;
    height: auto;
    border-radius: 3px;
    margin: 0 auto;
    padding: 10px;
    border-width: 1px;
    border-color: var(--border-color);
    border-style: solid;
}

.markdown-body .code-holder code {
white-space: pre-wrap;
    background-color:rgba(27,31,35,.05);
    border-radius:3px;
    font-size:85%;
    margin:0;
    padding:.2em .4em;
    color:var(--text-primary);
    transition: color 0.3s ease-in-out; transition-delay: 0.5s;
}

.markdown-body .code-holder code:hover {
color:#006ebc;
}

.markdown-body .math-holder {
width: 90%;
    text-align: center;
    height: auto;
    margin: 0 auto;
    padding: 20px;
    background-color: rgba(27,31,35,.05);
    border-style: solid;
    color: var(--text-primary);
    font-family: 'Times New Roman', Times, serif;
    transition: color 0.5s ease-in-out;
}

.markdown-body pre>code {
background:0 0;
    border:0;
    font-size:100%;
    margin:0;
    padding:0;
    white-space:pre;
    word-break:normal
}

.markdown-body .highlight {
margin-bottom:16px
}

.markdown-body .highlight pre {
margin-bottom:0;
    word-break:normal
}

.markdown-body .highlight pre,.markdown-body pre {
background-color:#f6f8fa;
    border-radius:3px;
    font-size:85%;
    line-height:1.45;
    overflow:auto;
    padding:16px
}

.markdown-body pre code {
background-color:transparent;
    border:0;
    display:inline;
    line-height:inherit;
    margin:0;
    max-width:auto;
    overflow:visible;
    padding:0;
    word-wrap:normal
}

.markdown-body .commit-tease-sha {
color: var(--text-secondary);
    display:inline-block;
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:90%
}

.markdown-body .blob-wrapper {
border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    overflow-x:auto;
    overflow-y:hidden
}

.markdown-body .blob-wrapper-embedded {
max-height:240px;
    overflow-y:auto
}

.markdown-body .blob-num {
-moz-user-select:none;
    -ms-user-select:none;
    -webkit-user-select:none;
    color:rgba(27,31,35,.3);
    cursor:pointer;
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:12px;
    line-height:20px;
    min-width:50px;
    padding-left:10px;
    padding-right:10px;
    text-align:right;
    user-select:none;
    vertical-align:top;
    white-space:nowrap;
    width:1%
}

.markdown-body .blob-num:hover {
color:rgba(27,31,35,.6)
}

.markdown-body .blob-num:before {
content:attr(data-line-number)
}

.markdown-body .blob-code {
line-height:20px;
    padding-left:10px;
    padding-right:10px;
    position:relative;
    vertical-align:top
}

.markdown-body .blob-code-inner {
color: var(--text-primary);
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:12px;
    overflow:visible;
    white-space:pre;
    word-wrap:normal
}

.markdown-body .pl-token.active,.markdown-body .pl-token:hover {
background:#ffea7f;
    cursor:pointer
}

.markdown-body :checked+.radio-label {
border-color:#0366d6;
    position:relative;
    z-index:1
}

.markdown-body .tab-size[data-tab-size="1"] {
-moz-tab-size:1;
    tab-size:1
}

.markdown-body .tab-size[data-tab-size="2"] {
-moz-tab-size:2;
    tab-size:2
}

.markdown-body .tab-size[data-tab-size="3"] {
-moz-tab-size:3;
    tab-size:3
}

.markdown-body .tab-size[data-tab-size="4"] {
-moz-tab-size:4;
    tab-size:4
}

.markdown-body .tab-size[data-tab-size="5"] {
-moz-tab-size:5;
    tab-size:5
}

.markdown-body .tab-size[data-tab-size="6"] {
-moz-tab-size:6;
    tab-size:6
}

.markdown-body .tab-size[data-tab-size="7"] {
-moz-tab-size:7;
    tab-size:7
}

.markdown-body .tab-size[data-tab-size="8"] {
-moz-tab-size:8;
    tab-size:8
}

.markdown-body .tab-size[data-tab-size="9"] {
-moz-tab-size:9;
    tab-size:9
}

.markdown-body .tab-size[data-tab-size="10"] {
-moz-tab-size:10;
    tab-size:10
}

.markdown-body .tab-size[data-tab-size="11"] {
-moz-tab-size:11;
    tab-size:11
}

.markdown-body .tab-size[data-tab-size="12"] {
-moz-tab-size:12;
    tab-size:12
}

.markdown-body .task-list-item {
list-style-type:none
}

.markdown-body .task-list-item+.task-list-item {
margin-top:3px
}

.markdown-body .task-list-item input {
margin:0 .2em .25em -1.6em;
    vertical-align:middle
}

.markdown-body .pl-3 {
padding-left:16px!important
}

.markdown-body .pl-7 {
padding-left:48px!important
}

.markdown-body .pl-8 {
padding-left:64px!important
}

.markdown-body .pl-9 {
padding-left:80px!important
}

.markdown-body .pl-10 {
padding-left:96px!important
}

.markdown-body .pl-11 {
padding-left:112px!important
}

.markdown-body .pl-12 {
padding-left:128px!important
}

/* Dark Mode Overrides */
[data-theme="dark"] .markdown-body h3,.markdown-body h4 {
font-weight:600
}

[data-theme="dark"] .markdown-body h5,.markdown-body h6 {
font-weight:600
}

[data-theme="dark"] .markdown-body p {
margin-bottom:10px;
    margin-top:0
}

[data-theme="dark"] .markdown-body .code-holder {
width: 100%;
    height: auto;
    border-radius: 3px;
    margin: 0 auto;
    padding: 10px;
    border-width: 1px;
    border-color:white;
    border-style: solid;
}

[data-theme="dark"] .markdown-body .code-holder code {
background-color:rgba(27,31,35,.05);
    border-radius:3px;
    font-size:85%;
    margin:0;
    padding:.2em .4em;
    transition: color 0.5s #006ebc;
}
/* ... */

